# Onboardly

./: JustFile  README.md  benfront.py  config.py  config.toml  frontend.py  locustfile.py  main.py  mkdocs.yml  pyproject.toml  website.py
bentoml/: service.py
config/: face_service.yaml  gesture_service.yaml  ocr_service.yaml
docs/: architecture.md  experience.md  functionalities.md  index.md  locust.md
routers/: __init__.py  id_router.py  session_router.py
services/: face_service.py  gesture_service.py  ocr_service.py
unified_logging/: __init__.py  config_types.py  logging_client.py  logging_server.py  logging_setup.py  micro_service.py  simple_script.py
unified_logging/logs/: logs.txt
utils/: config_loader.py
